GNOME Bugzilla – Bug 732974
Network Settings windows has very large width and cannot be resized
Last modified: 2015-10-15 14:41:05 UTC
Because of what I suspect is an excessive number of network interfaces (I was playing with docker containers for a while, and each creates a veth, which unfortunately I have found no way to ignore yet), the Network Settings windows is gigantic in width: more precisely, it is at 17692 pixels and I cannot resize it horizontally. Fedora 20 with GNOME 3.12 COPR repo gnome-control-center 3.12.1 NetworkManager 0.9.9.1-4.git20140319.fc20
Same here: Using the randomize hosts feature of the OpenVPN module, I enter a list of gateways separated by a colon. Having 10 possible gateways stretches the network control window beyond the screen, and can't be resized.
Same here. Window width gets too large when adding a VPN profile with a high number of gateway addresses. The interface text should get auto-wrapped to avoid blowing up the whole window. Gnome 3.14.2, Fedora 21
can you show a screenshot ? not clear to me right now how the window would get wide, I would have expected it to get tall...
Created attachment 292747 [details] Screeenshot from gnome-control-center with VPN gateway list (Display resolution: 1920x1200)
*** Bug 743624 has been marked as a duplicate of this bug. ***
*** Bug 738076 has been marked as a duplicate of this bug. ***
Can something be done about this bug? It's really annoying as it's making the Network part of the gnome-control-center totally unusable. It force my to use nm-connection-editor instead, but this is a dirty workaround.
As a non-gtk expert: It sounds like this could be achieved by calling gtk_label_set_line_wrap () ?
Created attachment 301468 [details] [review] network: Ellipsize gateway This value can get long, and we don't want to blow up the panels horizontal size.
Thanks Matthias, it solves the issue for me!
Review of attachment 301468 [details] [review]: Looks fine for gnome-3-14 and master. Wrapping the line might have been better to keep all the details visible, but it doesn't look like it's meant to be easily user-consumable values anyway.
Created attachment 302023 [details] Screenshot with Docker interfaces The bug with multiple Docker interfaces seems to be caused by a long string "Bridge slaves" on the "docker0" interface screen. See attached screenshot. At least 3.14 and 3.16 are affected.
Created attachment 302064 [details] [review] network: Stop "Bridge slaves" entry from becoming too wide
Committed to gnome-3-14 and master
*** Bug 748309 has been marked as a duplicate of this bug. ***
*** Bug 750243 has been marked as a duplicate of this bug. ***
This bug is still present in Gnome 3.18
(In reply to Eugene Dounar from comment #17) > This bug is still present in Gnome 3.18 Then it's a different bug. Please file a new bug with screenshots.