network: Stop "Bridge slaves" entry from becoming too wide

https://bugzilla.gnome.org/show_bug.cgi?id=732974